<resources>
    <string name="app_name">Université AR</string>
    <string name="provider_disabled">Localisation désactivée</string>
    <string name="provider_enabled">Localisation activée</string>
    <string name="provider_new_status">Etat actuel de la localisation : %2$s</string>
    <string name="new_location">Nouvelle position : Latitude = %1$f, Longitude = %2$f, Altitude = %3$f avec une précision de %4$f mètres</string>
    <string name="main">Camera</string>
    <string name="title_activity_carte">Map</string>
    <string name="carte">Carte</string>
    <string name="Retour">Retour </string>
    <string name="ENT">ENT</string>
    <string name="FDS">FDS</string>
    <string name="agenda">Agenda</string>
    <string name="galerie">Galerie</string>
    <string name="addPoi">Ajouter Note</string>
    <string name="createNote">Créer ma note</string>
    <string name="menu">Menu</string>
</resources>
