<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmil3.ar.projetar.MainActivity">


    <com.wikitude.architect.ArchitectView
        android:id="@+id/architectView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/carte"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/agenda"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="40dp"
            android:text="@string/addPoi"
            android:textSize="15sp" />
    </com.wikitude.architect.ArchitectView>

</RelativeLayout>
